# PK-resize-pro

./: .gitignore  Readme.md  package.json  requirements.txt
.github/workflows/: release.yml
backend/: README.md  ai_api.py  api.py  batch_process.py  border_remove.py  config.py  crop.py  dpi_export.py  enhance.py  face_restore.py  logger.py  main.py  outpaint.py  resize.py  resize_export.py  upscale.py  utils.py  zip_export.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: AIToolsPage.tsx  BatchPage.tsx  EditorPage.tsx  SettingsPage.tsx  UploadPage.tsx
scripts/: build-android.sh  build-macos.sh  build-windows.ps1  generate_tauri_icons.py  generate_test_image.py  test_pipeline.py
