[package]
name = "poster-resize-pro"
version = "1.0.0"
description = "Poster Resize Pro - Desktop Image Pipeline App"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-shell = "2.0.0"
